--- a/Pluto.Wpf.Controls/Pluto.Wpf.Controls.csproj
+++ b/Pluto.Wpf.Controls/Pluto.Wpf.Controls.csproj
@@ -5,7 +5,12 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
+    <Company>Pluto</Company>
+    <Title>Pluto.Wpf.Controls</Title>
+    <Product>Pluto.Wpf.Controls</Product>
+    <Description>Pluto.Wpf.Controls</Description>
+    <Copyright>© 2022 Pluto</Copyright>
   </PropertyGroup>
 
 </Project>
