--- a/Pluto.Wpf.Controls/Pluto.Wpf.Controls.csproj
+++ b/Pluto.Wpf.Controls/Pluto.Wpf.Controls.csproj
@@ -5,13 +5,14 @@
     <Nullable>disable</Nullable>
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Company>Pluto</Company>
     <Title>Pluto.Wpf.Controls</Title>
     <Product>Pluto.Wpf.Controls</Product>
     <Description>Pluto.Wpf.Controls</Description>
-    <Copyright>© 2022 Pluto</Copyright>
+    <Copyright>© 2023 Pluto</Copyright>
     <PackageProjectUrl>https://gitee.com/pluto2015/pluto.-wpf.-controls</PackageProjectUrl>
+    <PackageReleaseNotes>增加可关闭TabControl</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
