生成包含api文档的文件

--- a/Pluto.Wpf.Controls/Pluto.Wpf.Controls.csproj
+++ b/Pluto.Wpf.Controls/Pluto.Wpf.Controls.csproj
@@ -14,6 +14,7 @@
     <Authors>Pluto</Authors>
     <PackageProjectUrl>https://gitee.com/pluto2015/pluto.-wpf.-controls</PackageProjectUrl>
     <PackageReleaseNotes>解决可关闭tab设置选中tab未生效问题</PackageReleaseNotes>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
